--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 	<title>Site</title>
 </head>
 <body>
-	<h1>Site here</h1>
-	<p>some text</p>
-	<p>la la l l la</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo nihil consectetur dolorum, excepturi ipsum quaerat accusantium maiores quisquam, corporis delectus possimus illum porro error, temporibus labore ipsam quidem aut sit.</p>
 </body>
 </html>
